[package]
name = "mm3u"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
crc32fast = "1.4.0"
futures-util = "0.3.30"
memmap2 = "0.9.4"
reqwest = { version = "0.11.24", features = ["stream"] }
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.10.0"
